--- a/index.html
+++ b/index.html
@@ -601,7 +601,8 @@
             </div>
 
             <div class="product-card">
-                <img src="https://placehold.co/200x150/111/0f0?text=МОНИТОР" alt="Монитор Luna UltraView 144Hz">
+                <!-- Обновленная ссылка на изображение для Монитора Luna UltraView 144Hz -->
+                <img src="img/20250615_2001_image.jpg" alt="Монитор Luna UltraView 144Hz">
                 <h3 class="product-name">Монитор Luna UltraView 144Hz</h3>
                 <p class="product-description-short">Погрузитесь в игру с высокой частотой обновления и четким изображением.</p>
                 <div class="price">125 000 KZT</div>
@@ -610,7 +611,8 @@
             </div>
 
             <div class="product-card">
-                <img src="https://placehold.co/200x150/111/0f0?text=ИГРОВАЯ+МЫШЬ" alt="Игровая мышь Luna Precision">
+                <!-- Обновленная ссылка на изображение для Игровой мыши Luna Precision -->
+                <img src="uploaded:https___medias-p1.phoenix.razer.com_sys-master-phoenix-images-container_h3a_hb0_9529652609054_basilisk-v3-x-hyperspeed-2-500x500.png-083ee48f-190d-4d9b-b0ef-951e54addbda" alt="Игровая мышь Luna Precision">
                 <h3 class="product-name">Игровая мышь Luna Precision</h3>
                 <p class="product-description-short">Точность и комфорт для долгих игровых сессий.</p>
                 <div class="price">25 000 KZT</div>
