--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
 
         <section class="products">
             <div class="product-card">
-                <!-- Обновленная ссылка на изображение для игрового ПК -->
+                <!-- Убедитесь, что файл '20250613_1853_image.png' находится в папке img -->
                 <img src="img/20250613_1853_image.png" alt="Игровой ПК Luna Pro">
                 <h3 class="product-name">Игровой ПК Luna Pro</h3>
                 <p class="product-description-short">Мощный компьютер для максимальной производительности в любых играх.</p>
@@ -601,7 +601,7 @@
             </div>
 
             <div class="product-card">
-                <!-- Обновленная ссылка на изображение для Монитора Luna UltraView 144Hz -->
+                <!-- Убедитесь, что файл '20250615_2001_image.png' находится в папке img -->
                 <img src="img/20250615_2001_image.png" alt="Монитор Luna UltraView 144Hz">
                 <h3 class="product-name">Монитор Luna UltraView 144Hz</h3>
                 <p class="product-description-short">Погрузитесь в игру с высокой частотой обновления и четким изображением.</p>
@@ -611,7 +611,7 @@
             </div>
 
             <div class="product-card">
-                <!-- Обновленная ссылка на изображение для Игровой мыши Luna Precision -->
+                <!-- Убедитесь, что файл 'https___medias-p1.phoenix.razer.com_sys-master-phoenix-images-container_h3a_hb0_9529652609054_basilisk-v3-x-hyperspeed-2-500x500.png' находится в папке img -->
                 <img src="img/https___medias-p1.phoenix.razer.com_sys-master-phoenix-images-container_h3a_hb0_9529652609054_basilisk-v3-x-hyperspeed-2-500x500.png" alt="Игровая мышь Luna Precision">
                 <h3 class="product-name">Игровая мышь Luna Precision</h3>
                 <p class="product-description-short">Точность и комфорт для долгих игровых сессий.</p>
@@ -621,7 +621,8 @@
             </div>
 
             <div class="product-card">
-                <img src="https://placehold.co/200x150/111/0f0?text=КЛАВИАТУРА" alt="Механическая клавиатура Luna Tactile">
+                <!-- Убедитесь, что файл 'deathstalker-v2-pro-tkl-4-500x500.webp' находится в папке img -->
+                <img src="img/deathstalker-v2-pro-tkl-4-500x500.webp" alt="Механическая клавиатура Luna Tactile">
                 <h3 class="product-name">Механическая Клавиатура Luna Tactile</h3>
                 <p class="product-description-short">Быстрый отклик и приятные тактильные ощущения.</p>
                 <div class="price">45 000 KZT</div>
@@ -630,7 +631,8 @@
             </div>
 
             <div class="product-card">
-                <img src="https://placehold.co/200x150/111/0f0?text=НОУТБУК" alt="Игровой ноутбук Luna Blaze">
+                <!-- Убедитесь, что файл 'https___medias-p1.phoenix.razer.com_sys-master-phoenix-images-container_hbf_hde_9876443660318_250225-blade-16-s11-black-1500x1000-1.jpg' находится в папке img -->
+                <img src="img/https___medias-p1.phoenix.razer.com_sys-master-phoenix-images-container_hbf_hde_9876443660318_250225-blade-16-s11-black-1500x1000-1.jpg" alt="Игровой ноутбук Luna Blaze">
                 <h3 class="product-name">Игровой ноутбук Luna Blaze</h3>
                 <p class="product-description-short">Мощность настольного ПК в компактном корпусе.</p>
                 <div class="price">399 990 KZT</div>
