--- a/index.html
+++ b/index.html
@@ -641,7 +641,8 @@
             </div>
 
             <div class="product-card">
-                <img src="https://placehold.co/200x150/111/0f0?text=НАУШНИКИ" alt="Игровые наушники Luna Aura">
+                <!-- Убедитесь, что файл 'https___medias-p1.phoenix.razer.com_sys-master-phoenix-images-container_h46_h86_9807445753886_240820-BlackShark-V2-Pro-500x500.png' находится в папке img -->
+                <img src="img/https___medias-p1.phoenix.razer.com_sys-master-phoenix-images-container_h46_h86_9807445753886_240820-BlackShark-V2-Pro-500x500.png" alt="Игровые наушники Luna Aura">
                 <h3 class="product-name">Игровые наушники Luna Aura</h3>
                 <p class="product-description-short">Чистый звук и удобство для полного погружения.</p>
                 <div class="price">35 000 KZT</div>
