--- a/index.html
+++ b/index.html
@@ -656,7 +656,8 @@
         <h2 class="products-section-title">Игровая Периферия</h2>
         <section class="products">
             <div class="product-card">
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Игровая+Мышь+Pro" alt="Игровая Мышь Luna Pro X">
+                <!-- Убедитесь, что файл 'https___medias-p1.phoenix.razer.com_sys-master-phoenix-images-container_hdd_he4_9829121949726_viper-mini-se-white-500x500.png' находится в папке img -->
+                <img src="img/https___medias-p1.phoenix.razer.com_sys-master-phoenix-images-container_hdd_he4_9829121949726_viper-mini-se-white-500x500.png" alt="Игровая Мышь Luna Pro X">
                 <h3 class="product-name">Игровая Мышь Luna Pro X</h3>
                 <p class="product-description-short">Высокоточная мышь для киберспортсменов, 16000 DPI.</p>
                 <div class="price">30 000 KZT</div>
@@ -664,7 +665,8 @@
                 <button class="gemini-btn">✨ Улучшить описание</button>
             </div>
             <div class="product-card">
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Мех.+Клавиатура" alt="Механическая Клавиатура Luna RGB">
+                <!-- Убедитесь, что файл 'razer-huntsman-v3-pro-tkl-500x500-v2.webp' находится в папке img -->
+                <img src="img/razer-huntsman-v3-pro-tkl-500x500-v2.webp" alt="Механическая Клавиатура Luna RGB">
                 <h3 class="product-name">Механическая Клавиатура Luna RGB</h3>
                 <p class="product-description-short">Надежная механическая клавиатура с настраиваемой RGB подсветкой.</p>
                 <div class="price">55 000 KZT</div>
@@ -672,7 +674,8 @@
                 <button class="gemini-btn">✨ Улучшить описание</button>
             </div>
             <div class="product-card">
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Игровая+Гарнитура" alt="Игровая Гарнитура Luna SoundMaster">
+                <!-- Убедитесь, что файл 'barracuda-x_render-middle.jpg' находится в папке img -->
+                <img src="img/barracuda-x_render-middle.jpg" alt="Игровая Гарнитура Luna SoundMaster">
                 <h3 class="product-name">Игровая Гарнитура Luna SoundMaster</h3>
                 <p class="product-description-short">Погрузитесь в игру с объемным звуком 7.1 и кристально чистым микрофоном.</p>
                 <div class="price">40 000 KZT</div>
@@ -680,7 +683,8 @@
                 <button class="gemini-btn">✨ Улучшить описание</button>
             </div>
              <div class="product-card">
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Коврик+для+Мыши" alt="Коврик для Мыши Luna Glide XL">
+                <!-- Убедитесь, что файл 'fireflyv2pro-line-fireflyv2-thumbnail.webp' находится в папке img -->
+                <img src="img/fireflyv2pro-line-fireflyv2-thumbnail.webp" alt="Коврик для Мыши Luna Glide XL">
                 <h3 class="product-name">Коврик для Мыши Luna Glide XL</h3>
                 <p class="product-description-short">Игровой коврик увеличенного размера для максимального контроля.</p>
                 <div class="price">8 000 KZT</div>
@@ -688,7 +692,8 @@
                 <button class="gemini-btn">✨ Улучшить описание</button>
             </div>
             <div class="product-card">
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Веб-камера" alt="Веб-камера Luna StreamCam Pro">
+                <!-- Убедитесь, что файл '300x410-kiyolinepg-kiyoproultra.webp' находится в папке img -->
+                <img src="img/300x410-kiyolinepg-kiyoproultra.webp" alt="Веб-камера Luna StreamCam Pro">
                 <h3 class="product-name">Веб-камера Luna StreamCam Pro</h3>
                 <p class="product-description-short">Full HD веб-камера для стримов и видеосвязи.</p>
                 <div class="price">28 000 KZT</div>
@@ -696,7 +701,8 @@
                 <button class="gemini-btn">✨ Улучшить описание</button>
             </div>
              <div class="product-card">
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Микрофон+Gaming" alt="Микрофон Luna Broadcast">
+                <!-- Убедитесь, что файл '500x500_seiren-v3-chroma.webp' находится в папке img -->
+                <img src="img/500x500_seiren-v3-chroma.webp" alt="Микрофон Luna Broadcast">
                 <h3 class="product-name">Микрофон Luna Broadcast</h3>
                 <p class="product-description-short">Профессиональный USB-микрофон для чистого голоса в играх и стримах.</p>
                 <div class="price">32 000 KZT</div>
