--- a/index.html
+++ b/index.html
@@ -749,7 +749,17 @@
         <h2 class="products-section-title">Игровые Клавиатуры</h2>
         <section class="products">
             <div class="product-card">
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Мех.+Клавиатура+RGB" alt="Механическая Клавиатура Luna RGB Pro">
+                <!-- Убедитесь, что файл '800x600-razer-ornata-v3-x-product-promo.png' находится в папке img -->
+                <img src="img/800x600-razer-ornata-v3-x-product-promo.png" alt="Мембранная Клавиатура Luna Silent">
+                <h3 class="product-name">Мембранная Клавиатура Luna Silent</h3>
+                <p class="product-description-short">Тихая мембранная клавиатура с мягким нажатием для комфортной игры.</p>
+                <div class="price">20 000 KZT</div>
+                <button class="btn">Купить</button>
+                <button class="gemini-btn">✨ Улучшить описание</button>
+            </div>
+            <div class="product-card">
+                <!-- Убедитесь, что файл '800x600-razer-blackwidow-v3-pro-product-promo.png' находится в папке img -->
+                <img src="img/800x600-razer-blackwidow-v3-pro-product-promo.png" alt="Механическая Клавиатура Luna RGB Pro">
                 <h3 class="product-name">Механическая Клавиатура Luna RGB Pro</h3>
                 <p class="product-description-short">Полноразмерная клавиатура с настраиваемой RGB подсветкой и переключателями Cherry MX.</p>
                 <div class="price">60 000 KZT</div>
@@ -757,18 +767,11 @@
                 <button class="gemini-btn">✨ Улучшить описание</button>
             </div>
             <div class="product-card">
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Беспроводная+Клавиатура" alt="Беспроводная Клавиатура Luna Compact">
+                <!-- Убедитесь, что файл '800x600-razer-pro-type-ultra-product-promo.png' находится в папке img -->
+                <img src="img/800x600-razer-pro-type-ultra-product-promo.png" alt="Беспроводная Клавиатура Luna Compact">
                 <h3 class="product-name">Беспроводная Клавиатура Luna Compact</h3>
                 <p class="product-description-short">Компактная беспроводная клавиатура с быстрым откликом, идеальна для путешествий.</p>
                 <div class="price">48 000 KZT</div>
-                <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
-            </div>
-            <div class="product-card">
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Мембранная+Клавиатура" alt="Мембранная Клавиатура Luna Silent">
-                <h3 class="product-name">Мембранная Клавиатура Luna Silent</h3>
-                <p class="product-description-short">Тихая мембранная клавиатура с мягким нажатием для комфортной игры.</p>
-                <div class="price">20 000 KZT</div>
                 <button class="btn">Купить</button>
                 <button class="gemini-btn">✨ Улучшить описание</button>
             </div>
