--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
         .product-card img {
             max-width: 100%;
-            height: 150px;
+            height: 180px; /* Увеличена высота изображений */
             object-fit: contain;
             border-radius: 4px;
             margin-bottom: 15px;
