--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                 <p class="product-description-short">Мощный компьютер для максимальной производительности в любых играх.</p>
                 <div class="price">499 990 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
 
             <div class="product-card">
@@ -607,7 +607,7 @@
                 <p class="product-description-short">Погрузитесь в игру с высокой частотой обновления и четким изображением.</p>
                 <div class="price">125 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
 
             <div class="product-card">
@@ -617,7 +617,7 @@
                 <p class="product-description-short">Точность и комфорт для долгих игровых сессий.</p>
                 <div class="price">25 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
 
             <div class="product-card">
@@ -627,7 +627,7 @@
                 <p class="product-description-short">Быстрый отклик и приятные тактильные ощущения.</p>
                 <div class="price">45 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
 
             <div class="product-card">
@@ -637,7 +637,7 @@
                 <p class="product-description-short">Мощность настольного ПК в компактном корпусе.</p>
                 <div class="price">399 990 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
 
             <div class="product-card">
@@ -647,7 +647,7 @@
                 <p class="product-description-short">Чистый звук и удобство для полного погружения.</p>
                 <div class="price">35 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
         </section>
     </main>
@@ -662,7 +662,7 @@
                 <p class="product-description-short">Высокоточная мышь для киберспортсменов, 16000 DPI.</p>
                 <div class="price">30 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
             <div class="product-card">
                 <!-- Убедитесь, что файл 'razer-huntsman-v3-pro-tkl-500x500-v2.webp' находится в папке img -->
@@ -671,7 +671,7 @@
                 <p class="product-description-short">Надежная механическая клавиатура с настраиваемой RGB подсветкой.</p>
                 <div class="price">55 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
             <div class="product-card">
                 <!-- Убедитесь, что файл 'barracuda-x_render-middle.jpg' находится в папке img -->
@@ -680,7 +680,7 @@
                 <p class="product-description-short">Погрузитесь в игру с объемным звуком 7.1 и кристально чистым микрофоном.</p>
                 <div class="price">40 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
              <div class="product-card">
                 <!-- Убедитесь, что файл 'fireflyv2pro-line-fireflyv2-thumbnail.webp' находится в папке img -->
@@ -689,7 +689,7 @@
                 <p class="product-description-short">Игровой коврик увеличенного размера для максимального контроля.</p>
                 <div class="price">8 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
             <div class="product-card">
                 <!-- Убедитесь, что файл '300x410-kiyolinepg-kiyoproultra.webp' находится в папке img -->
@@ -698,7 +698,7 @@
                 <p class="product-description-short">Full HD веб-камера для стримов и видеосвязи.</p>
                 <div class="price">28 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
              <div class="product-card">
                 <!-- Убедитесь, что файл '500x500_seiren-v3-chroma.webp' находится в папке img -->
@@ -707,7 +707,7 @@
                 <p class="product-description-short">Профессиональный USB-микрофон для чистого голоса в играх и стримах.</p>
                 <div class="price">32 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
         </section>
     </section>
@@ -722,7 +722,7 @@
                 <p class="product-description-short">Быстрое время отклика и 144 Гц для плавного геймплея.</p>
                 <div class="price">95 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
             <div class="product-card">
                 <!-- Убедитесь, что файл '20250615_2056_image.png' находится в папке img -->
@@ -731,7 +731,7 @@
                 <p class="product-description-short">Детализированное QHD изображение и сверхвысокая частота обновления.</p>
                 <div class="price">180 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
             <div class="product-card">
                 <!-- Убедитесь, что файл '20250615_2057_image.png' находится в папке img -->
@@ -740,7 +740,7 @@
                 <p class="product-description-short">Погружение в игру с панорамным видом на изогнутом экране.</p>
                 <div class="price">250 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
         </section>
     </section>
@@ -755,7 +755,7 @@
                 <p class="product-description-short">Тихая мембранная клавиатура с мягким нажатием для комфортной игры.</p>
                 <div class="price">20 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
             <div class="product-card">
                 <!-- Убедитесь, что файл '800x600-razer-blackwidow-v3-pro-product-promo.png' находится в папке img -->
@@ -764,7 +764,7 @@
                 <p class="product-description-short">Полноразмерная клавиатура с настраиваемой RGB подсветкой и переключателями Cherry MX.</p>
                 <div class="price">60 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
             <div class="product-card">
                 <!-- Убедитесь, что файл '800x600-razer-pro-type-ultra-product-promo.png' находится в папке img -->
@@ -773,7 +773,7 @@
                 <p class="product-description-short">Компактная беспроводная клавиатура с быстрым откликом, идеальна для путешествий.</p>
                 <div class="price">48 000 KZT</div>
                 <button class="btn">Купить</button>
-                <button class="gemini-btn">✨ Улучшить описание</button>
+                <button class="gemini-btn">Узнать больше</button>
             </div>
         </section>
     </section>
