--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="index.html" class="logo">Luna</a>
+        <a href="index.html" class="logo">Luna">Luna</a>
         <nav class="nav">
             <ul class="menu">
                 <li class="menu-item">
@@ -1184,14 +1184,7 @@
                     <p id="product-detail-availability" class="product-detail-availability">В наличии</p>
                     <a href="#" class="product-detail-add-to-razer">ДОБАВИТЬ В МОЙ RAZER</a>
 
-                    <div class="product-detail-payment-options">
-                        <!-- Секция "Без переплат на 2 месяца" удалена -->
-                        <div class="payment-option-block">
-                            <h4>Без первого платежа на 12-24 месяца</h4>
-                            <p class="payment-loan-terms">Условия уточняйте у менеджера</p>
-                        </div>
-                    </div>
-
+                    <!-- Секция "Без переплат на 2 месяца" и "Без первого платежа на 12-24 месяца" удалены -->
                     <div class="product-detail-features">
                         <div class="feature-item">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-truck"><path d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"/><path d="M10 18H7l-3-3"/><path d="M7 18v-3"/><path d="M14 18h6a2 2 0 0 0 2-2v-3a2 2 0 0 0-2-2h-3.9L14 18Z"/><circle cx="17" cy="18" r="2"/><circle cx="7" cy="18" r="2"/></svg>
